chore: Java modernization – replace trim().isEmpty() with isBlank()
Change-Id: Ibbe8704b2099bb13c0cee940a9dd93159a750007