@@ -47,7 +47,7 @@ public class StringLengthValueSet implements ValueSet<String> {
 
     @Override
     public boolean contains(String value) {
-        if (value == null || value.trim().isEmpty()) {
+        if (value == null || value.isBlank()) {
             return containsNull();
         }
         return getMaximumLength() == null ? true : value.length() <= getMaximumLength();
